--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html --open",
-    "build":"parcel build index.html",
+    "build": "parcel build index.html",
+    "start-web": "webpack-dev-server --mode development --hot --colors --progress",
+    "build-web": "webpack --config webpack.config.js --colors --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +21,18 @@
   },
   "homepage": "https://github.com/max-razhnov/-KeyboardJS#readme",
   "devDependencies": {
-    "parcel-bundler": "^1.12.3"
+    "css-loader": "^3.2.0",
+    "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "parcel-bundler": "^1.12.3",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
