--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
